[gd_scene load_steps=12 format=3 uid="uid://c5wduygpwhgea"]

[ext_resource type="Texture2D" uid="uid://s83ygmr8dl8p" path="res://assets/sprites/textbox.png" id="1_0qpvj"]
[ext_resource type="Script" uid="uid://sprmluj8oym7" path="res://scripts/textbox.gd" id="1_hfq4m"]
[ext_resource type="Theme" uid="uid://0xoim3xiwd1f" path="res://assets/main_theme.tres" id="2_ahp4d"]
[ext_resource type="Texture2D" uid="uid://ds6iss3wrhabn" path="res://assets/sprites/textbox_arrow.png" id="3_ahp4d"]
[ext_resource type="Script" uid="uid://238b0whapysn" path="res://scripts/flyin_texteffect.gd" id="4_33dfv"]
[ext_resource type="Script" uid="uid://skh4qtlmxjia" path="res://scripts/custom_rich_text_label.gd" id="4_kl86f"]
[ext_resource type="Script" uid="uid://bpbsyudtix1ng" path="res://scripts/generic_button.gd" id="6_832rx"]

[sub_resource type="RichTextEffect" id="RichTextEffect_33dfv"]
script = ExtResource("4_33dfv")

[sub_resource type="Animation" id="Animation_hfq4m"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextboxArrow:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kl86f"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextboxArrow:self_modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_832rx"]
_data = {
&"RESET": SubResource("Animation_hfq4m"),
&"blink": SubResource("Animation_kl86f")
}

[node name="Textbox" type="CanvasLayer"]
visible = false
script = ExtResource("1_hfq4m")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Textbox" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 528)
scale = Vector2(4, 4)
texture = ExtResource("1_0qpvj")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
clip_contents = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -151.0
offset_right = 1119.0
offset_bottom = -40.0
grow_vertical = 0
theme = ExtResource("2_ahp4d")
bbcode_enabled = true
text = "[fly]Hello there [wave amp=50.0 freq=5.0 connected=1]fine[/wave] sir, how are you today. I'm trying to create a custom bbcode script which will allow the text to animate instead of just appear on screen. This is an example paragraph to use for testing.[/fly]"
fit_content = true
custom_effects = [SubResource("RichTextEffect_33dfv")]
script = ExtResource("4_kl86f")

[node name="TextboxArrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(1177, 628)
scale = Vector2(4, 4)
texture = ExtResource("3_ahp4d")

[node name="ArrowAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_832rx")
}

[node name="GenericButton" type="Button" parent="."]
offset_left = 30.0
offset_top = 559.0
offset_right = 1252.0
offset_bottom = 695.0
script = ExtResource("6_832rx")
invisable = true
metadata/_custom_type_script = "uid://bpbsyudtix1ng"

[connection signal="pressed" from="GenericButton" to="." method="_on_generic_button_pressed"]
